# weather-buoys

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  package.json  server.js  start.sh
data/: README.md  get_buoy.py
plotting/: plot_map.py  plot_wind_speed.py  requirements.txt
server/: Buoys.js  index.js
src/: Makefile  mod_arrays.f90  mod_io.f90  mod_parallel.f90  weather_stats.f90  weather_stats_parallel.f90
